--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,8 +1,10 @@
 ---
-import LibraryIcon from "../icons/Library.astro";
-import HomeIcon from "../icons/Home.astro";
-import SearchIcon from "../icons/Search.astro";
+import LibraryIcon from "@/icons/Library.astro";
+import HomeIcon from "@/icons/Home.astro";
+import SearchIcon from "@/icons/Search.astro";
 import SideMenuItem from "./SideMenuItem.astro";
+import SideMenuCard from "./SideMenuCard.astro";
+import { playlists } from "@/lib/data";
 ---
 
 <nav class="flex flex-col flex-1 gap-2">
@@ -25,6 +27,8 @@ import SideMenuItem from "./SideMenuItem.astro";
 
          Tu biblioteca
       </SideMenuItem>
+
+      {playlists.map((play) => <SideMenuCard playlist={play} />)}
     </ul>
   </div>
 </nav>
