--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,15 +18,16 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div id="app" class="relative h-screen p-2 gap-1">
+		<div id="app" class="relative h-screen p-2 gap-2">
 			<aside class="[grid-area:aside] flex-col flex overflow-y-auto">
 				<AsideMenu />
 			</aside>
-			<main class="[grid-area:main] bg-zinc-900 rounded-lg overflowy-auto">
-				Main
+			<main
+				class="[grid-area:main] bg-zinc-900 rounded-lg overflow-y-auto w-full"
+			>
+				<slot />
 			</main>
-			<footer class="[grid-area:player] min-h-[100px]"></footer>
-			<slot />
+			<footer class="[grid-area:player] min-h-[100px]">Player</footer>
 		</div>
 	</body>
 </html>
@@ -42,7 +43,48 @@ const { title } = Astro.props;
 </style>
 <style is:global>
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "CircularStd", system-ui, sans-serif;
 		background: #09090b;
+		color: white;
+	}
+
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+		font-weight: 500;
+		font-style: normal;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+		font-weight: 400;
+		font-style: normal;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+		font-weight: 300;
+		font-style: normal;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+		font-weight: 700;
+		font-style: normal;
+		font-display: swap;
+	}
+
+	@font-face {
+		font-family: "CircularStd";
+		src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+		font-weight: 900;
+		font-style: normal;
+		font-display: swap;
 	}
 </style>
