--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -16,16 +16,22 @@ const artistString = artists.join(", ");
   class="playlist-item transition-all duration-300 flex relative p-2
           overflow-hidden gap-2 pb-6 rounded-md hover:bg-zinc-500
           shadow-lg hover:shadow-xl bg-zinc-500/30 w-44 flex-col"
+  transition:name=`playlist ${id} box`
 >
   <picture class="aspect-square w-full h-auto flex-none">
     <img
       src={cover}
       alt={`Cover of ${title} by ${artistString}`}
       class="object-cover w-full h-full rounded-md"
+      transition:name=`playlist ${id} image`
     />
   </picture>
   <div class="flex flex-auto flex-col px-2">
-    <h4 class="text-white text-sm">{title}</h4>
-    <span class="text-xs text-gray-400">{artistString}</span>
+    <h4 transition:name=`playlist ${id} title` class="text-white text-sm">
+      {title}
+    </h4>
+    <span transition:name=`playlist ${id} artists` class="text-xs text-gray-400"
+      >{artistString}</span
+    >
   </div>
 </a>
