--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -1,7 +1,9 @@
 ---
+import MusicTable from "@/components/MusicTable.astro";
 import Layout from "../../layouts/Layout.astro";
 import PlayListItemCard from "@/components/PlayListItemCard.astro";
 import { allPlaylists, songs } from "@/lib/data";
+import { CardPlayButton } from "@/components/CardPlayButton";
 
 const { id } = Astro.params;
 const playlist = allPlaylists.find((playlist) => playlist.id === id);
@@ -13,7 +15,7 @@ const playlistSongs = songs.filter(
 <Layout title="Spotify Clone">
   <div
     id="playlist-container"
-    class="relative flex flex-colbg-zinc-900 overflow-x-hidden"
+    class="relative flex flex-col bg-zinc-900 overflow-x-hidden"
     transition:name=`playlist ${id} box`
   >
     <!-- PageHeader -->
@@ -42,17 +44,24 @@ const playlistSongs = songs.filter(
               <span>{playlist?.artists.join(", ")}</span>
             </div>
             <p class="mt-1">
-              <span class="text-white">50 canciones</span>, 3 h aprox
+              <span class="text-white">{playlistSongs.length} canciones</span>,
+              3 h aprox
             </p>
           </div>
         </div>
       </div>
     </header>
+
+    <div class="pl-8 pt-6">
+      <CardPlayButton id={id} size="large" client:load />
+    </div>
     <div class="relative z-10 px-6 pt-10"></div>
     <div
       class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-10"
     >
     </div>
+    <section class="p-6">
+      <MusicTable songs={playlistSongs} />
+    </section>
   </div>
 </Layout>
-<style></style>
